Fix layout broken in recent versions of Chrome

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,6 +1,7 @@
 .root {
-  // @TODO: Load font 
+  // @TODO: Load font
   font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  max-height: 100vh;
 }
 
 .root_loading {
@@ -9,7 +10,7 @@
   width: 100vw;
   align-items: center;
   justify-content: center;
-  background-color: #EEEEEE;
+  background-color: #eeeeee;
 }
 
 .container {
@@ -21,13 +22,11 @@
   flex-direction: column;
   flex-wrap: no-wrap;
   flex-grow: 1;
+  overflow: hidden;
   .menu {
-
   }
 
-
   .command_palette {
-
   }
 
   .row {
@@ -42,6 +41,8 @@
   }
 
   .sidebar {
+    max-height: 100%;
+    overflow: hidden;
     &_hidden {
       display: none;
     }
@@ -56,7 +57,7 @@
     }
     .stepper {
       flex-grow: 1;
+      max-height: 100%;
     }
   }
-
 }
