--- a/src/components/CephaloCanvasContainer/style.scss
+++ b/src/components/CephaloCanvasContainer/style.scss
@@ -2,6 +2,7 @@
   overflow: scroll;
   display: flex;
   background-color: #272727;
+  max-height: 100vh;
 }
 
 .lens {
